package contenido.Week06.Exercise02;

public class Car extends Vehicle {
    public Car(String licenseNumber) {
        super(licenseNumber);
        System.out.println("Carro");
    }
}
