package contenido.Week06.Exercise02;

public class HeavyTruck extends Truck {
    public HeavyTruck(String licenseNumber, double weigth, double loadCapacity) {
        super(licenseNumber, weigth, loadCapacity);
        System.out.println("camion pesado");
    }

}
