package contenido.Week06.Exercise02;

public class LigthTruck extends Truck {
    public LigthTruck(String licenseNumber, double weigth, double loadCapacity) {
        super(licenseNumber, weigth, loadCapacity);
    }

}
