package contenido.Week06.Exercise02;

public class Stevedore extends Employee{

    public Stevedore(String lastName, String name, String DNI, String address) {
        super(lastName, name, DNI, address);
    }
}
