package contenido.Week06.Exercise02;

public class Van extends Vehicle {
    public Van(String licenseNumber) {
        super(licenseNumber);
    }
}
