package contenido.Week06.Exercise02;

public class Vehicle {
    private String licenseNumber;

    public Vehicle(String licenseNumber) {
        this.licenseNumber = licenseNumber;

    }
}
